CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_train_hist__x/sfrosit_t_indiv_train_hist__x.object-meta.xml
<CustomObject>
    <description>sfrosit$t_indiv_train_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfrosit$t_indiv_train_hist</externalName>
    <label>Training History</label>
    <pluralLabel>Training History</pluralLabel>
</CustomObject>