CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_train_hist__x/fields/cde_source_vrfyd__c.field-meta.xml
<CustomField>
    <fullName>cde_source_vrfyd__c</fullName>
    <description>cde_source_vrfyd</description>
    <externalDeveloperName>cde_source_vrfyd</externalDeveloperName>
    <label>How Verified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>