CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_train_hist__x/fields/cde_type_train__c.field-meta.xml
<CustomField>
    <fullName>cde_type_train__c</fullName>
    <description>cde_type_train</description>
    <externalDeveloperName>cde_type_train</externalDeveloperName>
    <label>Type of Training</label>
    <length>255</length>
    <type>Text</type>
</CustomField>