CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_train_hist__x/fields/cnt_credits_train__c.field-meta.xml
<CustomField>
    <fullName>cnt_credits_train__c</fullName>
    <description>cnt_credits_train</description>
    <externalDeveloperName>cnt_credits_train</externalDeveloperName>
    <label>Training Credit</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>