CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_train_hist__x/fields/cnt_week_per_hours_estmd__c.field-meta.xml
<CustomField>
    <fullName>cnt_week_per_hours_estmd__c</fullName>
    <description>cnt_week_per_hours_estmd</description>
    <externalDeveloperName>cnt_week_per_hours_estmd</externalDeveloperName>
    <label>Estimated Hours per week</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>