CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_train_hist__x/fields/dte_compltn_exptd_train__c.field-meta.xml
<CustomField>
    <fullName>dte_compltn_exptd_train__c</fullName>
    <description>dte_compltn_exptd_train</description>
    <externalDeveloperName>dte_compltn_exptd_train</externalDeveloperName>
    <label>Expected training completion date</label>
    <type>Date</type>
</CustomField>