CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_train_hist__x/fields/idn_train_indiv__c.field-meta.xml
<CustomField>
    <fullName>idn_train_indiv__c</fullName>
    <description>idn_train_indiv</description>
    <externalDeveloperName>idn_train_indiv</externalDeveloperName>
    <label>Training ID</label>
    <length>50</length>
    <referenceTargetField>T_INDIV_TRAIN__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_INDIV_TRAIN__c</referenceTo>
    <relationshipLabel>Training Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_indiv_train_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>