CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_train_hist__x/fields/idn_train_indiv_hist__c.field-meta.xml
<CustomField>
    <fullName>idn_train_indiv_hist__c</fullName>
    <description>idn_train_indiv_hist</description>
    <externalDeveloperName>idn_train_indiv_hist</externalDeveloperName>
    <label>Training ID History</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>