CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_train_hist__x/fields/ind_prog_acredd__c.field-meta.xml
<CustomField>
    <fullName>ind_prog_acredd__c</fullName>
    <description>ind_prog_acredd</description>
    <externalDeveloperName>ind_prog_acredd</externalDeveloperName>
    <label>Accredated program indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>