CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_train_hist__x/fields/ind_progrs_stftry__c.field-meta.xml
<CustomField>
    <fullName>ind_progrs_stftry__c</fullName>
    <description>ind_progrs_stftry</description>
    <externalDeveloperName>ind_progrs_stftry</externalDeveloperName>
    <label>Satisfactory Progress Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>