CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_train_hist__x/fields/ind_skills_emplb__c.field-meta.xml
<CustomField>
    <fullName>ind_skills_emplb__c</fullName>
    <description>ind_skills_emplb</description>
    <externalDeveloperName>ind_skills_emplb</externalDeveloperName>
    <label>Employee Skills</label>
    <length>1</length>
    <type>Text</type>
</CustomField>