CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_train_hist__x/fields/nam_instn_train__c.field-meta.xml
<CustomField>
    <fullName>nam_instn_train__c</fullName>
    <description>nam_instn_train</description>
    <externalDeveloperName>nam_instn_train</externalDeveloperName>
    <label>Training Institution</label>
    <length>71</length>
    <type>Text</type>
</CustomField>